Closed
Bug 1609319
Opened 5 years ago
Closed 5 years ago
[MIPS] jit::Opcode conflicts with wasm::Opcode
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla74
| Tracking | Status | |
|---|---|---|
| firefox74 | --- | fixed |
People
(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Fedora; Linux mips64; rv:68.0) Gecko/20100101 Firefox/68.0
Steps to reproduce:
Build js program after changeset: ab08fd062f82
Actual results:
Build failed:
/home/zhaojiazhong/mozilla-central/js/src/wasm/WasmTextToBinary.cpp:171:5: error: reference to 'Opcode' is ambiguous
Opcode opcode_;
^
/home/zhaojiazhong/mozilla-central/js/src/jit/mips-shared/Assembler-mips-shared.h:224:6: note: candidate found by name lookup is 'js::jit::Opcode'
enum Opcode {
^
/home/zhaojiazhong/mozilla-central/js/src/wasm/WasmTypes.h:208:7: note: candidate found by name lookup is 'js::wasm::Opcode'
class Opcode {
^
Expected results:
Build js program successfully.
| Assignee | ||
Comment 1•5 years ago
|
||
Updated•5 years ago
|
Assignee: nobody → zhaojiazhong-hf
Pushed by shindli@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/76d281300837
[MIPS] Rename jit::Opcode to jit::OpcodeField to avoid conflicts with wasm::Opcode. r=lth
Comment 3•5 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
status-firefox74:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
You need to log in
before you can comment on or make changes to this bug.
Description
•