Bug 1609319 - [MIPS] Rename jit::Opcode to jit::OpcodeField to avoid conflicts with wasm::Opcode. r=lth

Differential Revision: https://phabricator.services.mozilla.com/D59979