js/src/jit/mips32/Simulator-mips32.cpp
@@ -106,8 +106,9 @@ class SimInstruction {
   Type instructionType() const;
 
   // Accessors for the different named fields used in the MIPS encoding.
-  inline Opcode opcodeValue() const {
-    return static_cast<Opcode>(bits(OpcodeShift + OpcodeBits - 1, OpcodeShift));
+  inline OpcodeField opcodeValue() const {
+    return static_cast<OpcodeField>(
+        bits(OpcodeShift + OpcodeBits - 1, OpcodeShift));
   }
 
   inline int rsValue() const {
@@ -162,8 +163,8 @@ class SimInstruction {
   }
 
   // Return the fields at their original place in the instruction encoding.
-  inline Opcode opcodeFieldRaw() const {
-    return static_cast<Opcode>(instructionBits() & OpcodeMask);
+  inline OpcodeField opcodeFieldRaw() const {
+    return static_cast<OpcodeField>(instructionBits() & OpcodeMask);
   }
 
   inline int rsFieldRaw() const {
@@ -197,7 +198,7 @@ class SimInstruction {
 
   // Get the secondary field according to the opcode.
   inline int secondaryValue() const {
-    Opcode op = opcodeFieldRaw();
+    OpcodeField op = opcodeFieldRaw();
     switch (op) {
       case op_special:
       case op_special2:
@@ -2236,7 +2237,7 @@ void Simulator::configureTypeRegister(SimInstruction* instr, int32_t& alu_out,
   // decodeTypeRegister correctly.
 
   // Instruction fields.
-  const Opcode op = instr->opcodeFieldRaw();
+  const OpcodeField op = instr->opcodeFieldRaw();
   const int32_t rs_reg = instr->rsValue();
   const int32_t rs = getRegister(rs_reg);
   const uint32_t rs_u = static_cast<uint32_t>(rs);
@@ -2486,7 +2487,7 @@ void Simulator::configureTypeRegister(SimInstruction* instr, int32_t& alu_out,
 
 void Simulator::decodeTypeRegister(SimInstruction* instr) {
   // Instruction fields.
-  const Opcode op = instr->opcodeFieldRaw();
+  const OpcodeField op = instr->opcodeFieldRaw();
   const int32_t rs_reg = instr->rsValue();
   const int32_t rs = getRegister(rs_reg);
   const uint32_t rs_u = static_cast<uint32_t>(rs);
@@ -3046,7 +3047,7 @@ void Simulator::decodeTypeRegister(SimInstruction* instr) {
 // Type 2: instructions using a 16 bytes immediate. (e.g. addi, beq).
 void Simulator::decodeTypeImmediate(SimInstruction* instr) {
   // Instruction fields.
-  Opcode op = instr->opcodeFieldRaw();
+  OpcodeField op = instr->opcodeFieldRaw();
   int32_t rs = getRegister(instr->rsValue());
   uint32_t rs_u = static_cast<uint32_t>(rs);
   int32_t rt_reg = instr->rtValue();  // Destination register.
